// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentTrack render album renders track 1`] = `
<Card>
  <Image
    as="img"
    src="http://path/to/cool/image.png"
    ui={true}
  />
  <CardContent>
    <div
      className="progress-container"
    >
      <span
        className="remaining-text"
      >
        NaN:NaN
      </span>
      <span
        className="track-length"
      >
        4:06
      </span>
      <Progress
        className=""
        percent={25}
        prefixCls="rc-progress"
        strokeColor="#2db7f5"
        strokeLinecap="round"
        strokeWidth={1}
        style={Object {}}
        trailColor="#D9D9D9"
        trailWidth={1}
      />
    </div>
    <CardHeader>
      No Time for Caution
    </CardHeader>
    <CardMeta>
      Hans Zimmer
    </CardMeta>
    <CardDescription>
      Interstellar: Original Motion Picture Soundtrack (Deluxe Digital Version)
       (2014)
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <AddedBy
      users={
        Array [
          Object {
            "_id": "123",
            "addedAt": "2019-12-17T13:11:37.316Z",
            "fullname": "Big Rainbowhead",
          },
        ]
      }
    />
  </CardContent>
</Card>
`;

exports[`CurrentTrack render composer renders track 1`] = `
<Card>
  <Image
    as="img"
    src="default-artwork.png"
    ui={true}
  />
  <CardContent>
    <div
      className="progress-container"
    >
      <span
        className="remaining-text"
      >
        NaN:NaN
      </span>
      <span
        className="track-length"
      >
        2:04
      </span>
      <Progress
        className=""
        percent={25}
        prefixCls="rc-progress"
        strokeColor="#2db7f5"
        strokeLinecap="round"
        strokeWidth={1}
        style={Object {}}
        trailColor="#D9D9D9"
        trailWidth={1}
      />
    </div>
    <CardHeader>
      Silent Running
    </CardHeader>
    <CardMeta>
      Joan Baez
    </CardMeta>
    <CardDescription>
      Peter Schickele
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <AddedBy />
  </CardContent>
</Card>
`;
